Add test for finding owner by empty lastName returns all owners Closes #66